<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDefaultBackground"
    tools:context="com.ute.tinit.chatkotlin.Activity.activity_profile_more"
    android:orientation="vertical">
<android.support.v7.widget.Toolbar
    android:id="@id/toolbar"
    android:layout_width="match_parent"
    android:background="@color/mainColor"
    android:layout_height="@dimen/size_toolbar"
    android:theme="@style/Theme.BackWhile">
    <TextView
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_marginRight="70dp"
        android:text="Tín Jenda"
        android:textColor="@color/colorWhile"
        android:textSize="20dp"/>
</android.support.v7.widget.Toolbar>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="20dp"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/mainColor"
        android:text="Cá nhân"/>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/colorLineeee" />
    <LinearLayout
        android:id="@+id/btn_liner_thongtin"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:background="@drawable/bg_button_1"
        android:gravity="center"
        android:layout_height="@dimen/size_toolbar">
        <TextView
            android:layout_width="match_parent"
            android:gravity="center|left"
            android:layout_height="@dimen/size_toolbar"
            android:textSize="@dimen/text_size_default"
            android:text="@string/string_thong_tin"/>
    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/colorLine" />
    <LinearLayout
        android:id="@+id/btn_cap_nhap_anh_dai_dien"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/bg_button_1"
        android:layout_height="@dimen/size_toolbar">
        <TextView
            android:layout_width="match_parent"
            android:gravity="center|left"
            android:layout_height="@dimen/size_toolbar"
            android:textSize="@dimen/text_size_default"
            android:text="@string/string_cap_nhap_anh_dai_dien"/>
    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/colorLine" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:textColor="@color/mainColor"
        android:text="Tài khoản"/>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/colorLineeee" />
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/colorLine" />
    <LinearLayout
        android:id="@+id/btn_linear_dangxuat"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/bg_button_1"
        android:layout_height="@dimen/size_toolbar">
        <TextView
            android:layout_width="match_parent"
            android:gravity="center|left"
            android:layout_height="@dimen/size_toolbar"
            android:textSize="@dimen/text_size_default"
            android:text="@string/string_dang_xuat"/>
    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/colorLine" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textColor="@color/mainColor"
        android:text="Khác"/>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/colorLineeee" />
    <LinearLayout
        android:id="@+id/btn_linear_yeucauketban"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:gravity="left"
        android:background="@drawable/bg_button_1"
        android:orientation="horizontal"
        android:layout_height="@dimen/size_toolbar">
        <TextView
            android:layout_width="120dp"
            android:gravity="center_vertical|left"
            android:layout_height="@dimen/size_toolbar"
            android:textSize="@dimen/text_size_default"
            android:text="@string/string_yeu_cau_ket_ban"/>
        <TextView
            android:id="@+id/numRequestMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17dp"
            android:text=""
            android:textStyle="bold"
            android:textColor="@color/colorRed"/>
    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/colorLine" />
    <LinearLayout
        android:id="@+id/btn_linear_danhsachden"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/bg_button_1"
        android:layout_height="@dimen/size_toolbar">
        <TextView
            android:layout_width="match_parent"
            android:gravity="center|left"
            android:layout_height="@dimen/size_toolbar"
            android:textSize="@dimen/text_size_default"
            android:text="@string/string_danh_sach_den"/>
    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/colorLine" />
</LinearLayout>
</LinearLayout>
